--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@clearoutio/clearout",
-  "version": "1.1.7",
+  "version": "1.1.8",
   "author": "Clearout <us@clearout.io> (https://clearout.io)",
   "deprecated": false,
   "description": "Clearout NodeJS module for Clearout REST API ",
@@ -17,19 +17,22 @@
     "email",
     "email verification",
     "email validation",
+    "email verification api",
     "email verifier",
     "email validator",
+    "email address validator",
+    "email cleaning",
     "email finder",
     "email discovery",
-    "bulk finder",
     "bulk verification",
+    "bulk email verifier",
+    "bulk email finder",
     "find email",
-    "email cleaning",
     "verification",
     "validation",
     "cleaning",
-    "real time",
-    "real time validation"
+    "real time validation",
+    "real time verification"
   ],
   "dependencies": {
     "@types/node": ">=8.1.0",
